# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("enterprise") {
  sources = [
    "browser/reporting/policy_info.cc",
    "browser/reporting/policy_info.h",
    "browser/reporting/report_request_definition.h",
    "browser/reporting/report_uploader.cc",
    "browser/reporting/report_uploader.h",
  ]

  deps = [
    "//base",
    "//components/policy/core/browser",
    "//components/policy/core/common",
    "//components/policy/proto",
    "//components/strings",
    "//net",
  ]
}

source_set("unit_tests") {
  testonly = true

  sources = [ "browser/reporting/report_uploader_unittest.cc" ]

  deps = [
    ":enterprise",
    "//base",
    "//base/test:test_support",
    "//components/policy/core/common:test_support",
    "//testing/gmock",
    "//testing/gtest",
  ]
}
