# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("browser") {
  sources = [
    "prerender_config.cc",
    "prerender_config.h",
  ]

  deps = [
    "//components/prerender/common:mojo_bindings",
    "//ui/gfx/geometry",
  ]
}
