# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("browser") {
  sources = [
    "prerender_config.cc",
    "prerender_config.h",
    "prerender_contents.cc",
    "prerender_contents.h",
    "prerender_contents_delegate.h",
    "prerender_field_trial.cc",
    "prerender_field_trial.h",
    "prerender_handle.cc",
    "prerender_handle.h",
    "prerender_histograms.cc",
    "prerender_histograms.h",
    "prerender_history.cc",
    "prerender_history.h",
    "prerender_manager.cc",
    "prerender_manager.h",
    "prerender_manager_delegate.h",
    "prerender_util.cc",
    "prerender_util.h",
  ]

  deps = [
    "//components/content_settings/core/browser",
    "//components/google/core/common",
    "//components/prerender/common",
    "//components/prerender/common:mojo_bindings",
    "//content/public/browser",
    "//net",
    "//ui/gfx/geometry",
    "//ui/gfx/image/mojom:mojom_traits",
    "//url",
  ]
}

source_set("unit_tests") {
  testonly = true
  sources = [
    "prerender_history_unittest.cc",
    "prerender_util_unittest.cc",
  ]

  deps = [
    ":browser",
    "//base",
    "//base/test:test_support",
    "//google_apis:google_apis",
    "//testing/gtest",
    "//url:url",
  ]
}
