# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("renderer") {
  sources = [
    "prerender_helper.cc",
    "prerender_helper.h",
  ]

  deps = [
    "//components/prerender/common",
    "//components/prerender/common:mojo_bindings",
    "//content/public/renderer",
    "//third_party/blink/public:blink_headers",
  ]
}
