# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")

static_library("invalidations") {
  sources = [
    "fcm_handler.cc",
    "fcm_handler.h",
    "sync_invalidations_service.cc",
    "sync_invalidations_service.h",
  ]

  public_deps = [
    "//base",
    "//components/gcm_driver",
    "//components/keyed_service/core",
  ]
}
