# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/protobuf/proto_library.gni")

if (is_android) {
  import("//build/config/android/rules.gni")

  proto_java_library("proto_java") {
    proto_path = "."
    sources = [
      "client_variations.proto",
      "study.proto",
      "variations_seed.proto",
    ]
  }
}

proto_library("proto") {
  sources = [
    "client_variations.proto",
    "study.proto",
    "variations_seed.proto",
  ]

  # The generated JavaScript bindings are used to build a small, self-contained
  # parser for ClientVariations in Dev Tools. This parser is used to decode the
  # X-Client-Data header.
  generate_javascript = true
}

group("devtools") {
  deps = [ "devtools" ]
}
