# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("contacts") {
  sources = [
    "nearby_share_contact_manager.cc",
    "nearby_share_contact_manager.h",
  ]

  deps = [
    "//base",
    "//chrome/browser/nearby_sharing/proto",
  ]
}
