# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")

source_set("android") {
  sources = [
    "bulk_leak_check_controller_android.cc",
    "bulk_leak_check_controller_android.h",
  ]
  deps = [ "//components/password_manager/core/browser" ]
}

source_set("unit_tests") {
  testonly = true
  sources = [ "bulk_leak_check_controller_android_unittest.cc" ]
  deps = [
    ":android",
    "//testing/gmock",
    "//testing/gtest",
  ]
}

android_library("public_java") {
  deps = [
    ":java_resources",
    ":public_ui_java",
    "internal:public_ui_factory_java",
    "//base:base_java",
    "//third_party/android_deps:androidx_fragment_fragment_java",
    "//third_party/android_deps:androidx_preference_preference_java",
  ]
  sources = [
    "java/src/org/chromium/chrome/browser/password_check/PasswordCheck.java",
    "java/src/org/chromium/chrome/browser/password_check/PasswordCheckFragmentView.java",
  ]
}

android_library("public_ui_java") {
  deps = []
  sources = [ "java/src/org/chromium/chrome/browser/password_check/PasswordCheckComponentUi.java" ]
}

android_resources("java_resources") {
  sources = []
  deps = [ "//chrome/browser/ui/android/strings:ui_strings_grd" ]
  custom_package = "org.chromium.chrome.browser.password_check"
}
