# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")

source_set("android") {
  sources = [
    "bulk_leak_check_controller_android.cc",
    "bulk_leak_check_controller_android.h",
  ]
  deps = [ "//components/password_manager/core/browser" ]
}

source_set("unit_tests") {
  testonly = true
  sources = [ "bulk_leak_check_controller_android_unittest.cc" ]
  deps = [
    ":android",
    "//testing/gmock",
    "//testing/gtest",
  ]
}

android_library("public_java") {
  deps = [
    ":java_resources",
    ":public_ui_java",
    "internal:public_ui_factory_java",
    "//base:base_java",
    "//third_party/android_deps:androidx_fragment_fragment_java",
    "//third_party/android_deps:androidx_preference_preference_java",
    "//third_party/android_deps:androidx_recyclerview_recyclerview_java",
  ]
  sources = [
    "java/src/org/chromium/chrome/browser/password_check/CompromisedCredential.java",
    "java/src/org/chromium/chrome/browser/password_check/PasswordCheck.java",
    "java/src/org/chromium/chrome/browser/password_check/PasswordCheckFragmentView.java",
  ]
}

android_library("public_ui_java") {
  deps = []
  sources = [ "java/src/org/chromium/chrome/browser/password_check/PasswordCheckComponentUi.java" ]
}

junit_binary("password_check_junit_tests") {
  testonly = true

  sources = [ "junit/src/org/chromium/chrome/browser/password_check/PasswordCheckControllerTest.java" ]

  deps = [
    "//base:base_java",
    "//base:base_junit_test_support",
    "//chrome/browser/password_check/android:public_java",
    "//chrome/browser/password_check/android/internal:internal_java",
    "//third_party/hamcrest:hamcrest_java",
    "//third_party/junit",
    "//ui/android:ui_full_java",
  ]
}

android_library("test_java") {
  testonly = true

  sources = [ "javatests/src/org/chromium/chrome/browser/password_check/PasswordCheckViewTest.java" ]

  deps = [
    ":public_java",
    "//base:base_java",
    "//base:base_java_test_support",
    "//chrome/android:chrome_java",
    "//chrome/android:chrome_test_java",
    "//chrome/android:chrome_test_util_java",
    "//chrome/browser/password_check/android/internal:internal_java",
    "//chrome/browser/settings:test_support_java",
    "//chrome/test/android:chrome_java_test_support",
    "//components/embedder_support/android:util_java",
    "//content/public/test/android:content_java_test_support",
    "//third_party/android_deps:androidx_recyclerview_recyclerview_java",
    "//third_party/hamcrest:hamcrest_java",
    "//third_party/junit",
    "//third_party/mockito:mockito_java",
    "//ui/android:ui_full_java",
    "//ui/android:ui_utils_java",
  ]
}
android_resources("java_resources") {
  sources = [
    "java/res/drawable-night/password_checkup_warning.xml",
    "java/res/drawable/password_checkup_warning.xml",
  ]
  deps = [ "//chrome/browser/ui/android/strings:ui_strings_grd" ]
  custom_package = "org.chromium.chrome.browser.password_check"
}
