# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/closure_compiler/compile_js.gni")
import("//tools/polymer/html_to_js.gni")

js_type_check("closure_compile") {
  is_polymer3 = true
  deps = [
    ":logging_tab",
    ":nearby_internals",
  ]
}

js_library("nearby_internals") {
  deps = [
    ":logging_tab",
    "//third_party/polymer/v3_0/components-chromium/polymer:polymer_bundled",
    "//ui/webui/resources/js:cr.m",
  ]
}

js_library("logging_tab") {
  deps = [
    "//third_party/polymer/v3_0/components-chromium/polymer:polymer_bundled",
  ]
}

html_to_js("web_components") {
  js_files = [
    "logging_tab.js",
    "nearby_internals.js",
  ]
}
