# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/closure_compiler/compile_js.gni")
import("//tools/polymer/html_to_js.gni")

js_type_check("closure_compile") {
  is_polymer3 = true
  deps = [
    ":log_object",
    ":logging_tab",
    ":nearby_internals",
    ":nearby_logs_browser_proxy",
    ":types",
  ]
}

js_library("nearby_internals") {
  deps = [
    ":log_object",
    ":logging_tab",
    ":nearby_logs_browser_proxy",
    ":types",
    "//third_party/polymer/v3_0/components-chromium/polymer:polymer_bundled",
    "//ui/webui/resources/js:cr.m",
  ]
}

js_library("logging_tab") {
  deps = [
    ":log_object",
    ":nearby_logs_browser_proxy",
    ":types",
    "//third_party/polymer/v3_0/components-chromium/polymer:polymer_bundled",
    "//ui/webui/resources/js:cr.m",
    "//ui/webui/resources/js:web_ui_listener_behavior.m",
  ]
}

js_library("log_object") {
  deps = [
    ":nearby_logs_browser_proxy",
    ":types",
    "//third_party/polymer/v3_0/components-chromium/polymer:polymer_bundled",
  ]
}

js_library("nearby_logs_browser_proxy") {
  deps = [
    ":types",
    "//ui/webui/resources/js:cr.m",
  ]
}

js_library("types") {
}

js_library("shared_style") {
}

html_to_js("web_components") {
  js_files = [
    "log_object.js",
    "logging_tab.js",
    "nearby_internals.js",
    "shared_style.js",
  ]
}
