# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("nearby") {
  sources = [
    "nearby_connections.cc",
    "nearby_connections.h",
  ]

  deps = [ "//third_party/nearby:core" ]

  public_deps = [
    "decoder",
    "//base",
    "//chrome/services/sharing/public/cpp",
    "//chrome/services/sharing/public/mojom",
    "//mojo/public/cpp/bindings",
  ]
}
