# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/closure_compiler/compile_js.gni")

js_type_check("closure_compile") {
  is_polymer3 = true
  closure_flags = default_closure_args + [
                    "browser_resolver_prefix_replacements=\"chrome-extension://mhjfbmdgcfjbbpaeojofohoefgiehjai/=../../chrome/browser/resources/pdf/\"",
                    "js_module_root=../../chrome/test/data/webui/",
                    "js_module_root=./gen/chrome/test/data/webui/",
                  ]
  deps = [
    ":download_controls_test",
    ":gesture_detector_test",
    ":test_util",
  ]
}

js_library("gesture_detector_test") {
  deps = [
    "//chrome/browser/resources/pdf:gesture_detector",
    "//ui/webui/resources/js/cr:event_target.m",
  ]
  externs_list = [ "$externs_path/test.js" ]
}

js_library("download_controls_test") {
  deps = [
    ":test_util",
    "//chrome/browser/resources/pdf:constants",
    "//chrome/browser/resources/pdf/elements:viewer-download-controls",
    "//third_party/polymer/v3_0/components-chromium/polymer:polymer_bundled",
    "//ui/webui/resources/cr_elements/cr_action_menu:cr_action_menu.m",
    "//ui/webui/resources/cr_elements/cr_icon_button:cr_icon_button.m",
    "//ui/webui/resources/js:util.m",
  ]
  externs_list = [ "$externs_path/test.js" ]
}

js_library("test_util") {
  deps = [
    "//chrome/browser/resources/pdf:viewport",
    "//third_party/polymer/v3_0/components-chromium/polymer:polymer_bundled",
  ]
}
